Cleaned up go pages.

--- a/content/programming/go/i18n-i10n.md
+++ b/content/programming/go/i18n-i10n.md
@@ -12,8 +12,8 @@ tags: ["go", "программирование"]
 
 Для форматирования вывода информации в национальном формате (например, чисел) используются следующие пакеты:
 
-* "golang.org/x/text/language"
-* "golang.org/x/text/message"
+* [golang.org/x/text/language](https://pkg.go.dev/golang.org/x/text/language)
+* [golang.org/x/text/message](https://pkg.go.dev/golang.org/x/text/message)
 
 По-умолчанию, они не установлены. Необходимо их скачать:
 
@@ -22,7 +22,7 @@ go get -u golang.org/x/text/language
 go get -u golang.org/x/text/message
 ```
 
-Для вывода информации на основании языка используется тип **{{message.Printer}}**.
+Для вывода информации на основании языка используется тип `message.Printer`.
 Используется он следующий образом:
 
 ```go
