Added toc to i18n-i10n

--- a/content/programming/go/i18n-i10n.md
+++ b/content/programming/go/i18n-i10n.md
@@ -8,6 +8,8 @@ tags: ["go", "программирование"]
 
 [Альтернативный пакет (https://github.com/nicksnyder/go-i18n)](https://github.com/nicksnyder/go-i18n).
 
+{{< toc >}}
+
 ## Internationalization (i18n)
 
 Для форматирования вывода информации в национальном формате (например, чисел) используются следующие пакеты:
