Delete quotes in tags

--- a/content/programming/go/i18n-i10n.md
+++ b/content/programming/go/i18n-i10n.md
@@ -1,7 +1,7 @@
 ---
 title: "Internationalization (i18n) и Localization (l10n) в Go"
 date: 2022-10-02T14:59:08+03:00
-tags: ["go", "программирование"]
+tags: [go, программирование]
 ---
 
 Информация взята [отсюда](https://phraseapp.com/blog/posts/internationalization-i18n-go)
